<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/trinetra_logo">

                </ImageView>

                <TextView
                    android:id="@+id/tv_user_type"
                    style="@style/text_16_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/user"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_state" />


                    <Spinner
                        android:id="@+id/spin_state"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_city" />


                    <Spinner
                        android:id="@+id/spin_city"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_distt" />

                    <EditText
                        android:id="@+id/et_DISTT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/enter_distt"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sch_name" />


                    <EditText
                        android:id="@+id/et_sch_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/sch_name"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/class_name" />


                    <EditText
                        android:id="@+id/et_class_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/class_name"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section" />


                    <EditText
                        android:id="@+id/et_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/section"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />


                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_no" />


                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/mobile_no"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />


                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>


                <TextView
                    android:visibility="gone"
                    style="@style/text_16_black"
                    android:textAlignment="textStart"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_no" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_light_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reference" />


                    <EditText
                        android:id="@+id/et_reference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/reference"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_payment"
                    style="@style/textview12white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rectangle_bg_primary"
                    android:padding="@dimen/_10sdp"
                    android:text="Register"
                    android:textAlignment="center">
                </TextView>


            </LinearLayout>

        </ScrollView>



    </RelativeLayout>
</layout>