<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/trinetra_logo">

                </ImageView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        style="@style/text_14_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_no" />


                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/mobile_no"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_login"
                    style="@style/textview12white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rectangle_bg_primary"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/login"
                    android:textAlignment="center"></TextView>


            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_donor"
                style="@style/textview12white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/rectangle_bg_primary"
                android:padding="@dimen/_10sdp"
                android:text="@string/signup_as_donor"
                android:textAlignment="center">
            </TextView>

            <TextView
                android:id="@+id/tv_user"
                style="@style/textview12white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/rectangle_bg_primary"
                android:padding="@dimen/_10sdp"
                android:text="@string/signup_as_user"
                android:textAlignment="center">
            </TextView>


        </LinearLayout>


    </RelativeLayout>
</layout>